--- a/style/main.css
+++ b/style/main.css
@@ -197,15 +197,44 @@ img{
     background-size: 40px 40px, 40px 40px, cover;
 }
 
-.hero__title{
-    background-color: #454e51;
-    color: white;
-    font-size: px;
+.hero__title {
+    margin-top: -15px;
+    background-color: #00000030;
+    color: rgb(0, 0, 0);
+    font-size: 36px; /* Defina o tamanho da fonte conforme necessário */
     font-weight: 600;
-    padding: 20px 30px;
+    padding: 5px 20px;
     text-transform: uppercase;
-    border-radius: 0px;
-}
+    border-radius: 5px; /* Ajuste o valor conforme desejado */
+    position: relative; /* Para posicionar os efeitos de luz */
+    overflow: hidden; /* Para esconder o overflow dos elementos filhos */
+  }
+
+  .hero__title::before {
+    content: '';
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: linear-gradient(to right, rgba(255,255,255,0.1) 0%, rgba(255,255,255,0.5) 50%, rgba(255,255,255,0.1) 100%);
+    z-index: 1;
+    pointer-events: none; /* Para evitar interação do usuário */
+    animation: shine 5s infinite linear;
+  }
+
+  @keyframes shine {
+    0% {
+      transform: translateX(-150%);
+    }
+    50% {
+      transform: translateX(150%);
+    }
+    100% {
+      transform: translateX(150%);
+    }
+  }
+
 
 .hero__text{
     background-color: #242a2c;
@@ -213,7 +242,7 @@ img{
     color: white;
     padding: 20px;
     font-size: 22px;
-    border-radius: 0px;
+    border-radius: 3px;
 
 
 }
