--- a/style/main.css
+++ b/style/main.css
@@ -1,7 +1,12 @@
+@import "https://unpkg.com/open-props" layer(design.system);
+
+
 body{
     margin: 0;
     font-family: 'Open Sans', sans-serif;
     line-height: 1.5;
+
+
 }
 
 img{
@@ -29,7 +34,7 @@ img{
 
 .logo-text{
     text-transform: uppercase;
-    background-color: rgb(38,188,249);
+    background-color: rgb(189, 192, 193);
     font-size: 24px;
     margin: 0;
     padding: 20px;
@@ -61,6 +66,8 @@ img{
     background: rgb(149,92,230);
     text-align: center;
     border-bottom: 1px dotted rgba(255,255,255, 0.2);
+
+
 
 
 
@@ -261,6 +268,13 @@ img{
     /* Adicionando o código do botão */
     background-color: rgb(38, 188, 249);
     cursor: pointer;
+
+
+
+
+
+
+
 }
 
 .hero__btn:hover {
@@ -373,26 +387,27 @@ img{
     grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
     grid-auto-rows: auto;
     grid-gap: 0;
-    background: yellow;
+    background: rgb(255, 255, 0);
+
+
 }
 .last-articles__thumbs img{
     display: block;
     width: 100%;
+
+
 }
 
 
-.laptop-slider{
-    background-color: #ffffff;
-    padding: 125px 0 100px;
-    width: 100%;
-    overflow: auto;
-}
+
 
 .slideshow{
     white-space: nowrap;
+
 }
 .slideshow figure{
     display: inline-block;
+
 }
 
 
@@ -402,6 +417,8 @@ img{
     background-color: #454e51;
     padding: 50px 0;
     border-bottom: 12px solid rgb(226,25,217);
+    margin-top: auto;
+
 }
 
 .quote-slideshow h2{
@@ -561,4 +578,89 @@ section#redes-sociais img:hover {
 
   .pulsing {
     animation: pulse 2s infinite;
+  }
+
+
+
+
+
+
+
+  @layer demo {
+    fieldset {
+      grid-template-columns:
+        var(--col-1, 1fr)
+        var(--col-2, 1fr)
+        var(--col-3, 1fr)
+        var(--col-4, 1fr)
+        var(--col-5, 1fr)
+      ;
+
+      @media (prefers-reduced-motion: no-preference) {
+        transition: grid-template-columns 2s var(--ease-spring-5);
+      }
+
+      &:has(label:nth-child(1) > input:checked) {
+        --col-1: 5fr;
+        --col-2: 3fr;
+      }
+      &:has(label:nth-child(2) > input:checked) {
+        --col-1: 2fr;
+        --col-2: 5fr;
+        --col-3: 2fr;
+      }
+      &:has(label:nth-child(3) > input:checked) {
+        --col-2: 2fr;
+        --col-3: 5fr;
+        --col-4: 2fr;
+      }
+      &:has(label:nth-child(4) > input:checked) {
+        --col-3: 2fr;
+        --col-4: 5fr;
+        --col-5: 2fr;
+      }
+      &:has(label:nth-child(5) > input:checked) {
+        --col-4: 3fr;
+        --col-5: 5fr;
+      }
+
+      > label {
+        background-image: var(--_img);
+        background-position: center;
+        background-size: auto 125%;
+      }
+    }
+  }
+
+  @layer demo.support {
+    html {
+
+      block-size: 100%;
+    }
+
+
+
+    fieldset {
+      inline-size: a;
+
+      display: grid;
+      grid-auto-flow: column;
+      grid-template-rows: 50vh;
+      gap: var(--size-3);
+      border: none;
+
+      > label {
+        cursor: pointer;
+        border-radius: var(--radius-4);
+
+        &:focus-within {
+          outline: 1px solid rgb(226,25,217);
+          outline-offset: 5px;
+        }
+
+        > input {
+          opacity: 0;
+        }
+      }
+    }
   }
