--- a/style/main.css
+++ b/style/main.css
@@ -686,34 +686,37 @@ section#redes-sociais img:hover {
 
 
 
-  .slider-container {
-    overflow: hidden; /* Para esconder partes do slider que estão fora do container */
-    height: 400px; /* Altura fixa para limitar a altura do slider */
-    position: relative; /* Para permitir posicionamento absoluto dos slides */
+
+
+  .slider {
+    width: 100%;
+    height: 400px; /* Ajuste a altura conforme necessário */
+    overflow: hidden; /* Oculta qualquer conteúdo que extrapole os limites do contêiner */
+    position: relative;
 }
 
-.slider {
-    display: flex; /* Para que os slides fiquem em linha horizontal */
-    transition: transform 0.5s; /* Adiciona uma transição suave ao slider */
+.slider .first {
+    display: flex;
+    width: 400%; /* Largura total do slider é 4 vezes a largura de cada slide */
+    transition: margin 0.5s; /* Adiciona uma transição suave ao mover os slides */
 }
 
-.slide {
-    flex: 0 0 100%; /* Faz com que cada slide ocupe toda a largura do container */
+.slider .slide {
+    width: 25%; /* Cada slide ocupa 25% da largura do slider */
 }
 
-/* Regras para controlar a posição vertical dos slides */
-#radio1:checked ~ .slider {
-    transform: translateY(0);
+#radio1:checked ~ .slider .first {
+    margin-top: 0;
 }
 
-#radio2:checked ~ .slider {
-    transform: translateY(-100%);
+#radio2:checked ~ .slider .first {
+    margin-top: -100%;
 }
 
-#radio3:checked ~ .slider {
-    transform: translateY(-200%);
+#radio3:checked ~ .slider .first {
+    margin-top: -200%;
 }
 
-#radio4:checked ~ .slider {
-    transform: translateY(-300%);
+#radio4:checked ~ .slider .first {
+    margin-top: -300%;
 }
