--- a/style/main.css
+++ b/style/main.css
@@ -451,7 +451,7 @@ img{
 
 
 .last-articles__title{
-    background-color: #7b3773;
+    background-color:  rgb(57, 100, 150);
     padding: 5px 0;
 }
 
