--- a/style/main.css
+++ b/style/main.css
@@ -753,3 +753,38 @@ html, body {
     padding-right: 25px;
     padding-left: 25px;
   }
+
+
+
+h1 {
+    animation: appear  3s;
+
+}
+img {
+    animation: appear 2s;
+
+}
+
+nav {
+    animation: appear 1s;
+
+}
+
+
+
+
+
+
+
+
+@keyframes appear {
+    from {
+       opacity: 0;
+       translate: -100vw 0;
+    }
+
+    to {
+        opacity: 1;
+        translate: 0 0;
+    }
+}
